--- a/app/views/event/new.html.erb
+++ b/app/views/event/new.html.erb
@@ -1,2 +1,43 @@
-<h1>Event#new</h1>
-<p>Find me in app/views/event/new.html.erb</p>
+<html>
+  <body>
+
+    <div class="container text-center">
+      <div class="row">
+        <div class="col mb-4">
+          <h1>CREATION EVENEMENT</h1>
+        </div>
+      </div>
+
+<div class="card-body">
+    <%= form_tag event_index_path, method: "post" do %>
+
+      <%= label_tag 'start_date'%>
+      <%= text_field_tag 'start_date',nil, class: 'form-control', placeholder: 'Enter start_date' %>
+      <br /> <br />
+
+      <%= label_tag 'duration' %>
+      <%= text_area_tag 'duration' ,nil, class: 'form-control', placeholder: 'Enter duration'%>
+      <br /> <br />
+
+      <%= label_tag 'title' %>
+      <%= text_area_tag 'title',nil, class: 'form-control', placeholder: 'Enter title' %>
+      <br /> <br />
+
+      <%= label_tag 'description' %>
+      <%= text_area_tag 'description',nil, class: 'form-control', placeholder: 'Enter description' %>
+      <br /> <br />
+
+      <%= label_tag 'price' %>
+      <%= text_area_tag 'price',nil, class: 'form-control', placeholder: 'Enter price' %>
+      <br /> <br />
+
+      <%= label_tag 'location' %>
+      <%= text_area_tag 'location',nil, class: 'form-control', placeholder: ' Entrer location' %>
+      <br /> <br />
+
+      <%= submit_tag "CREER", class: "btn btn-primary"%>
+      <% end %>
+  </div>
+
+  </body>
+</html>
