--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -9,7 +9,7 @@
           <a class="nav-link" href="/event/index"> ACCUIEL<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="/events_controller/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/event/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#"></a>
