--- a/app/views/event/index.html.erb
+++ b/app/views/event/index.html.erb
@@ -6,14 +6,16 @@
   </head>
   <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/event/index"> ACCUIEL<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/event"> ACCUIEL<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/users/<%= current_user.id %>"> Mon profil<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/event/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
@@ -34,7 +36,7 @@
     S'inscrire / Se connecter
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <%= link_to "Sign in", new_user_session_path %>
+    <%= link_to "Sign in", new_user_session_path %><br>
     <%= link_to "Sign up", new_user_registration_path %> <br>
   </div>
 </div>
