--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -1,12 +1,14 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="/event/index"> ACCUIEL<span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/event"> ACCUIEL<span class="sr-only">(current)</span></a>
+        </li>
+         <li class="nav-item active">
+          <a class="nav-link" href="/users/<%= current_user.id %>"> Mon profil<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/event/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
@@ -28,8 +30,7 @@
   Mon profil
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <a class="dropdown-item" href="/users/show">Mon profil</a>
-   <%= link_to "Sign out", destroy_user_session_path, method: :delete %> <br>
+      <%= link_to "Sign out", destroy_user_session_path, method: :delete %> <br>
   </div>
 </div>
 
