--- a/app/views/event/index.html.erb
+++ b/app/views/event/index.html.erb
@@ -1,58 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/event"> ACCUIEL<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/event/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-        </li>
-      </ul>
-    </div>
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    S'inscrire / Se connecter
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-    <%= link_to "Sign in", new_user_session_path %><br>
-    <%= link_to "Sign up", new_user_registration_path %> <br>
-  </div>
-</div>
-</nav>
-
     <div class="header-image text-center">
       <h1 class= 'header-title'>Welcome on Eventbrite</h1>
     </div>
     <div class="container">
-      <div class="row d-flex align-items-stretch">
+      <div class="row">
         <% @events.each do |event| %>
-          <div class="col-sm-6 col-md-4 py-4">
-            <div class="card w-100 mb-4 box-shadow h-100 rounded-lg">
-              <div class="card-body">
-                <h5 class="card-title">
-                  <%= link_to event.title, event_path(event.id) %>
-                </h5>
-                <p class="card-subtitle text-muted"><%= event.start_date %></p>
-                <p class="card-subtitle text-muted"><%= event.location %></p>
+          <div class="col-sm-6">
+            <div>
+              <div>
+                <ul type="circle">
+                  <li><%= link_to event.title, event_path(event.id) %></li>
+                </ul>
+                <p><%= event.start_date %></p>
+                <p><%= event.location %></p>
               </div>
             </div>
           </div>
@@ -61,3 +27,4 @@
     </div>
   </body>
 </html>
+
