--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -1,58 +1,19 @@
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/event"> ACCUIEL<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/event/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-        </li>
-      </ul>
-    </div>
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  Mon profil
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %> <br>
-  </div>
-</div>
-
-
-
-
-  </nav>
-
 <div class="container mt-4">
   <div class="row">
     <div class="col text-center">
       <h1><%= @event.title %></h1>
     </div>
   </div>
-
-  <div class="card mb-3 border-primary border-left-0">
+  <div class="card mb-4">
     <div class="row">
       <div class="col">
         <div class="card-body">
-          <p class="card-text"><strong>Description : </strong><%= @event.description %></p>
-          <p class="card-text"><strong>Nombre de Participants : </strong><%= @event.attendances.count %></p>
-          <p class="card-text"><strong>Date de début : </strong><%= @event.start_date %></p>
-          <p class="card-text"><strong>Date de fin : </strong><%= @event.end_date %></p>
-          <p class="card-text"><strong>Prix : </strong><%= @event.price %> €</p>
-          <p class="card-text"><strong>Lieu de l'événement : </strong><%= @event.location %></p>
+          <p><strong>Description : </strong><%= @event.description %></p>
+          <p><strong>Nombre de Participants : </strong><%= @event.attendances.count %></p>
+          <p><strong>Date de début : </strong><%= @event.start_date %></p>
+          <p><strong>Date de fin : </strong><%= @event.end_date %></p>
+          <p><strong>Prix : </strong><%= @event.price %> €</p>
+          <p><strong>Lieu de l'événement : </strong><%= @event.location %></p>
         </div>
       </div>
     </div>
