--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,56 +5,19 @@
     <title></title>
   </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/event"> ACCUIEL<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="/event/new">CREATION EVENEMENT <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
-        </li>
-      </ul>
-    </div>
-
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  Mon profil
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <%= link_to "Sign out", destroy_user_session_path, method: :delete %> <br>
-  </div>
-</div>
-
-
-
-
-  </nav>
     <div class="container mt-4">
       <h1 class='text-center'>User Profile</h1>
       <br />
-      <div class="card mb-3 border-primary border-left-0">
+      <div class="card mb-3">
       <div class="row no-gutters">
       <div class="col-2 col-lg-1 m-auto text-center">
       </div>
     <div class="col-10 col-lg-11">
         <div class="card-body">
-          <p class="card-text"><strong>First Name : </strong><%= @user.first_name %></p>
-          <p class="card-text"><strong>Last Name : </strong><%= @user.last_name %></p>
-          <p class="card-text"><strong>Description : </strong><%= @user.description %></p>
-          <p class="card-text"><strong>Email : </strong><%= @user.email %></p>
+          <p><strong>First Name : </strong><%= @user.first_name %></p>
+          <p><strong>Last Name : </strong><%= @user.last_name %></p>
+          <p><strong>Description : </strong><%= @user.description %></p>
+          <p><strong>Email : </strong><%= @user.email %></p>
         </div>
     </div>
   </div>
