--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "Inscription", new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
-              <%= link_to "Conexion", new_user_session_path, class: 'dropdown-item' %>
+              <%= link_to "Connexion", new_user_session_path, class: 'dropdown-item' %>
             </div>
           </li>
           <% end %>
