--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Creation événement", new_event_path, class: 'nav-link' %> <i></i>
+            <%= link_to "Creation événement", new_event_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to "Profile", user_path(current_user.id), class: 'nav-link' %>
@@ -37,14 +37,13 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "Inscription", new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
-              <%= link_to "Connexion", new_user_session_path, class: 'dropdown-item' %>
+              <%= link_to "Conexion", new_user_session_path, class: 'dropdown-item' %>
             </div>
           </li>
           <% end %>
         </ul>
       </div>
     </nav>
-    <style>
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
