--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <%= link_to "Profile", user_path(current_user.id), class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "Deconnexion", destroy_user_session_path, class: 'nav-link', method: :delete %>
+            <%= link_to "Sign out", destroy_user_session_path, class: 'nav-link', method: :delete %>
           </li>
           <% else %>
           <li class="nav-item dropdown">
@@ -37,7 +37,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "Inscription", new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
-              <%= link_to "Connexion", new_user_session_path, class: 'dropdown-item' %>
+              <%= link_to "Se Connecter", new_user_session_path, class: 'dropdown-item' %>
             </div>
           </li>
           <% end %>
