Finalisation projet mardie 13 aout 2019

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
               S'inscrire/Se connecter
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to "Inscription", new_user_registration_path, class: 'dropdown-item' %>
+              <%= link_to "S'inscrire", new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
               <%= link_to "Se Connecter", new_user_session_path, class: 'dropdown-item' %>
             </div>
