--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <%= link_to "Profile", user_path(current_user.id), class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, class: 'nav-link', method: :delete %>
+            <%= link_to "Sign_out", destroy_user_session_path, class: 'nav-link', method: :delete %>
           </li>
           <% else %>
           <li class="nav-item dropdown">
@@ -35,9 +35,9 @@
               S'inscrire/Se connecter
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to "S'inscrire", new_user_registration_path, class: 'dropdown-item' %>
+              <%= link_to "S'inscrire" , new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
-              <%= link_to "Se Connecter", new_user_session_path, class: 'dropdown-item' %>
+              <%= link_to "Se_Connecter", new_user_session_path, class: 'dropdown-item' %>
             </div>
           </li>
           <% end %>
