Finalisation projet mardie 13 aout 2019

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "S'inscrire" , new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
-              <%= link_to "new_user_session_pathConnecter", new_user_session_path, class: 'dropdown-item' %>
+              <%= link_to "Sign up", new_user_session_path, class: 'dropdown-item' %>
             </div>
           </li>
           <% end %>
