--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <%= link_to "Profile", user_path(current_user.id), class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, class: 'nav-link', method: :delete %>
+            <%= link_to "Sign out", destroy_user_session_path, class: 'nav-link', method: 'delete' %>
           </li>
           <% else %>
           <li class="nav-item dropdown">
