--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,24 +10,25 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
 <body>
-     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
-      <%= link_to "NambininaEventbrite", root_path, class: 'navbar-brand' %>
-      <button class="navbar-toggler" type="button" data-toggle="collapse">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <%= link_to "Eventbrite", root_path, class: 'navbar-brand' %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
         </ul>
         <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Creation événement", new_event_path, class: 'nav-link' %>
+            <%= link_to "Créer un événement", new_event_path, class: 'nav-link' %>
           </li>
           <li class="nav-item">
             <%= link_to "Profile", user_path(current_user.id), class: 'nav-link' %>
           </li>
           <li class="nav-item">
-            <%= link_to "Sign out", destroy_user_session_path, method: :post, class: 'nav-link' %>
+            <%= link_to "Sign out", destroy_user_session_path, class: 'nav-link', :method => :delete %>
           </li>
           <% else %>
           <li class="nav-item dropdown">
@@ -35,15 +36,15 @@
               S'inscrire/Se connecter
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <%= link_to "S'inscrire" , new_user_registration_path, class: 'dropdown-item' %>
+              <%= link_to "S'inscrire", new_user_registration_path, class: 'dropdown-item' %>
               <div class="dropdown-divider"></div>
-              <%= link_to "Sign up", new_user_session_path, class: 'dropdown-item' %>
+              <%= link_to "Se Connecter", new_user_session_path, class: 'dropdown-item' %>
             </div>
           </li>
           <% end %>
         </ul>
       </div>
-    </nav>
+</nav>
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
