--- a/app/views/event/show.html.erb
+++ b/app/views/event/show.html.erb
@@ -31,10 +31,15 @@
   <% end %>
   </div>
 
-<div class="card text-center ">
+
+<% if current_user == @event.admin %>
+  <div class="text-center">
+    <a  href="/event/<%= @event.id %>" data-method= "delete">Delete_event</a>
+  </div>
+  <div class="card text-center ">
     <%= link_to "édition de l'événement",    edit_event_path(@event), class: 'nav-link'%>
 </div>
 
-<div class="text-center">
-   <a  href="/event/<%= @event.id %>" data-method= "delete">Delete_event</a>
-</div>
+<% else %>
+<p>NE TOUCHE A RIEN tu n'est pas l'admin</p>
+<% end %>
